style(readme.md): update Readme.md docs

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "main": "exec scripts/main.sh",
     "lint": "shellcheck scripts/*.sh && prettier --check .",
     "format": "prettier --write .",
     "test": "bash tests/test_usb_info.sh",
