--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prepare": "husky",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "changelog:first": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "changelog:fix": "./scripts/changelog-fix.sh"
+    "changelog:fix": "./scripts/changelog-fix.sh",
+     "release": "./scripts/release.sh"
   },
   "repository": {
     "type": "git",
