feat(wrap): added wrap_md.sh v0.1 to maintain wrap limit

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "main": "exec scripts/main.sh",
+    "wrap:md": "exec scripts/wrap_md.sh",
     "lint:sh": "shellcheck scripts/*.sh",
     "lint:md": "markdownlint . ",
     "format": "prettier --write . && markdownlint --fix .",
